🚀 Add product snapshot to orders
